<?xml version="1.0"?>
<package format="2">
  <name>gpio_control</name>
  <version>1.0.0</version>
  <description>Control GPIO pins on Raspberry Pi, Nvidia Jetson, and other Linux devices with GPIO pins</description>

  <maintainer email="christopher.thierauf@tufts.edu">cst</maintainer>
  <license>Apache 2.0</license>
  <url type="website">https://github.com/cst0/gpio_control</url>

  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>

</package>
